fix: dark mode for input components

--- a/client/src/assets/base.css
+++ b/client/src/assets/base.css
@@ -31,3 +31,6 @@
       @apply border border-light-primary dark:border-dark-primary dark:text-light-primary p-1;
     }
   }
+  .input-style {
+    @apply border border-light-primary dark:border-dark-primary dark:text-light-primary rounded-md bg-white dark:bg-dark-primary-light;
+  }
